# pycrimson

./: .gitignore  LICENSE.txt  README.md  _run_main.py  file_format_notes.md  pyproject.toml
src/pycrimson/: __about__.py  __init__.py  _context.py  cli.py
src/pycrimson/_crypto/: __init__.py  _chacha20.py  _checksum.py
src/pycrimson/_dds/: __init__.py  _directxtex.py  _types.py
src/pycrimson/_files/: __init__.py  _binarystring.py  _pabgb.py  _pabgh.py  _paloc.py  _pamt.py  _papgt.py  _pathc.py  _save.py
src/pycrimson/_reflection/: __init__.py  _converters.py  _parser.py  _types.py
tests/: test_context.py  test_inventory.py  test_pathc.py
