[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycrimson"
dynamic = ["version"]
description = 'Tooling to work with Crimson Desert files'
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = []
authors = [
  { name = "LukeFZ", email = "17146677+LukeFZ@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "cryptography",
  "tqdm",
  "lz4",
  "bier @ git+https://github.com/K0lb3/Binaryhelper@luke/context-rework",
  "cyclopts",
]

[project.urls]
Documentation = "https://github.com/LukeFZ/pycrimson#readme"
Issues = "https://github.com/LukeFZ/pycrimson/issues"
Source = "https://github.com/LukeFZ/pycrimson"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/pycrimson/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pycrimson tests}"

[tool.coverage.run]
source_pkgs = ["pycrimson", "tests"]
branch = true
parallel = true
omit = ["src/pycrimson/__about__.py"]

[tool.coverage.paths]
pycrimson = ["src/pycrimson", "*/pycrimson/src/pycrimson"]
tests = ["tests", "*/pycrimson/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[project.scripts]
pycrimson = "pycrimson.cli:main"
